--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.8.8)
 project(networktables-pc)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -Werror -pedantic -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall -Werror -pedantic -pthread -fPIC")
 file(GLOB_RECURSE SOURCES1 ${PROJECT_SOURCE_DIR}/networktables/*.cpp)
 file(GLOB_RECURSE SOURCES2 ${PROJECT_SOURCE_DIR}/networktables2/*.cpp)
 file(GLOB_RECURSE SOURCES3 ${PROJECT_SOURCE_DIR}/tables/*.cpp)
@@ -16,8 +16,9 @@ set(SOURCES
 )
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/networktablesshim)
-add_library(networktables SHARED ${SOURCES})
-add_library(networktables_static STATIC ${SOURCES})
+add_library(ntobjects OBJECT ${SOURCES})
+add_library(networktables SHARED $<TARGET_OBJECTS:ntobjects>)
+add_library(networktables_static STATIC $<TARGET_OBJECTS:ntobjects>)
 add_executable(test_server ${PROJECT_SOURCE_DIR}/test/server.cpp)
 add_executable(test_client ${PROJECT_SOURCE_DIR}/test/client.cpp)
 target_link_libraries(test_server networktables_static)
